# L-SAT

./: README.md  pyproject.toml
docs/: Notes_MindMath.ipynb  solver_comparizon.ipynb
docs/.ipynb_checkpoints/: Notes_MindMath-checkpoint.ipynb  solver_comparizon-checkpoint.ipynb
l_sat/: convertor.py  generator.py  lloss.py  model.py  solver.py  train.py
tests/: utests.py
